# makepad-analyzer

./: Cargo.toml  README.md
analyzer/: Cargo.toml  README.md
analyzer/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: client.rs  lib.rs  logging.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  manifest.rs
crates/core/src/config/: logging.rs
crates/core/src/errors/: document_error.rs  mod.rs  sync_error.rs
crates/document/: Cargo.toml
crates/document/src/: lib.rs  pid_locked_files.rs  utils.rs
crates/makepad-analyzer/: Cargo.toml  README.md
crates/makepad-analyzer-plugin-manager/: Cargo.toml
crates/makepad-analyzer-tracing/: Cargo.toml
crates/makepad-analyzer/src/: config.rs
crates/makepad-analyzer/src/core/: session.rs
crates/makepad-analyzer/src/handlers/: notification.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  token.rs  token_map.rs
crates/plugin-manager/: Cargo.toml
crates/plugin-manager/src/: lib.rs
crates/plugin-types/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: context.rs  lib.rs  server.rs
crates/server/src/handlers/: notification.rs  request.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs  lru_session_cache.rs  session.rs  sync.rs  utils.rs
crates/tracing/src/: lib.rs
editors/code/: README.md  package.json
editors/code/src/: main.ts
editors/makepad-studio/: README.md
examples/simple/: Cargo.toml
examples/simple/src/: app.rs  main.rs
lib/makepad-lsp-server/: Cargo.toml
lib/makepad-lsp-server/src/: main.rs
libs/makepad-analyzer-live/: Cargo.toml  README.md
libs/makepad-analyzer-live/src/: lib.rs  live_keywords_docs.rs
libs/makepad-analyzer-server/: Cargo.toml
libs/makepad-analyzer-server/src/: lib.rs
libs/makepad-analyzer-server/src/handlers/: request.rs
libs/makepad-analyzer-tracing/: Cargo.toml
libs/makepad-analyzer-tracing/src/: lib.rs
libs/makepad-lsp/: Cargo.toml
libs/makepad-lsp/src/: config.rs  lib.rs  server.rs
libs/makepad-lsp/src/handlers/: handle_initialize.rs  mod.rs  notification.rs  request.rs
libs/plugin/: Cargo.toml
libs/plugin-manager/: Cargo.toml
libs/plugin-manager/src/: lib.rs
libs/plugin-types/: Cargo.toml
libs/plugin-types/src/: lib.rs
libs/plugin/src/: lib.rs
libs/server/: Cargo.toml
libs/server/src/: analyzer_state.rs  error.rs  lib.rs  server.rs
libs/server/src/capablities/: mod.rs
libs/server/src/core/: session.rs
libs/server/src/handlers/: request.rs
lsp/: Cargo.toml  README.md
lsp/src/: main.rs
plugins/makepad-analyer-plugin-shader/: Cargo.toml
plugins/makepad-analyzer-live/: Cargo.toml
plugins/makepad-analyzer-live/src/: lib.rs
plugins/makepad-analyzer-live/src/live/: completions.rs  mod.rs
plugins/makepad-analyzer-plugin-live/: Cargo.toml
plugins/makepad-analyzer-plugin-live/src/: lib.rs
plugins/makepad-analyzer-plugin-live/src/capabilities/: completions.rs
