[workspace]
members = [ "analyzer", "crates/*", "plugins/*"]
resolver = "2"

[workspace.package]
version       = "0.0.1"
rust-version  = "1.82"
edition       = "2021"
license       = "MIT"

[workspace.dependencies]
# Internal dependencies
makepad-analyzer-server         = { path = "crates/makepad-analyzer", version = "0.0.1"}
makepad-analyzer-config         = { path = "crates/config", version = "0.0.1"}
makepad-analyzer-context        = { path = "crates/context", version = "0.0.1"}
makepad-analyzer-session        = { path = "crates/session", version = "0.0.1"}
makepad-analyzer-plugin-manager = { path = "crates/plugin-manager", version = "0.0.1"}
makepad-analyzer-tracing        = { path = "crates/tracing", version = "0.0.1" }
makepad-analyzer-plugin-types   = { path = "crates/plugin-types", version = "0.0.1" }
# Internal plugin dependencies
makepad-analyzer-plugin-live    = { path = "plugins/makepad-analyzer-plugin-live", version = "0.0.1" }
# External dependencies
anyhow              = { version = "1.0" }
serde               = { version = "1.0" }
serde_json          = { version = "1.0" }
tracing             = { version = "0.1" }
tracing-subscriber  = { version = "0.3" }
tokio               = { version = "1.0" }
ansiterm            = { version = "0.12" }
tower-lsp           = { version = "0.20" }
lsp-types           = { version = "0.94.1" }
parking_lot         = { version = "0.12" }
clap                = { version = "4.5" }
dashmap             = { version = "6.1" }
once_cell           = { version = "1.20.2" }
