[package]
description = "makepad analyzer server"
edition     = "2021"
license     = "MIT"
name        = "makepad-analyzer"
version     = "0.0.1"

[dependencies]
makepad-analyzer-server   = { workspace = true }
makepad-analyzer-tracing  = { workspace = true }

anyhow                    = { workspace = true }
clap                      = { workspace = true, features = ["derive"] }
tokio                     = { workspace = true }
