[package]
description = "makepad analyzer context"
edition     = "2021"
license     = "MIT"
name        = "makepad-analyzer-context"
version     = "0.0.1"

[dependencies]
tower-lsp = { workspace = true, features = ["proposed"] }

makepad-analyzer-config.workspace = true
makepad-analyzer-session.workspace = true
makepad-analyzer-plugin-manager.workspace = true
