[package]
description = "makepad analyzer core"
edition     = "2021"
license     = "MIT"
name        = "makepad-analyzer-core"
version     = "0.0.1"

[dependencies]
lsp-types   = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace   = true, features = ["derive"] }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true, features = ["fs"]}
