[package]
description = "makepad analyzer server"
edition = "2021"
license = "MIT"
name = "makepad-analyzer-server"
version = "0.0.1"

[dependencies]
makepad-analyzer-tracing.workspace        = true
makepad-analyzer-plugin-manager.workspace = true

anyhow.workspace      = true
serde = { workspace   = true, features = ["derive"] }
serde_json.workspace  = true
tracing.workspace     = true
parking_lot.workspace = true
tower-lsp             = { workspace = true, features = ["proposed"] }
dashmap.workspace     = true
tokio                 = { workspace = true, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
once_cell.workspace   = true
