[package]
description = "makepad analyzer plugin manager"
edition     = "2021"
license     = "MIT"
name        = "makepad-analyzer-plugin-manager"
version     = "0.0.1"

[dependencies]
makepad-analyzer-plugin-types.workspace = true
tracing.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

# Plugins
makepad-analyzer-plugin-live.workspace = true
