[package]
description = "makepad analyzer session"
edition     = "2021"
license     = "MIT"
name        = "makepad-analyzer-session"
version     = "0.0.1"

[dependencies]
makepad-analyzer-core    = { workspace = true }
makepad-analyzer-tracing = { workspace = true }
tracing                  = { workspace = true }
dashmap                  = { workspace = true }
tokio                    = { workspace = true, features = ["rt-multi-thread", "time", "sync", "macros"] }
parking_lot              = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
