[package]
name = "makepad-lsp"
description = "LSP server for Makepad"
version = "0.0.1"
edition = "2021"

[dependencies]

makepad-analyzer-tracing.workspace = true

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

tracing.workspace = true

lsp-types = "0.97.0"
tower-lsp = { workspace = true, features = ["proposed"] }

tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }

walkdir = "2.5.0"
cargo_metadata = "0.19.1"
