[package]
name = "makepad-analyzer-plugin-manager"
version.workspace = true
edition.workspace = true

[dependencies]
lsp-types.workspace = true
makepad-analyzer-plugin-types.workspace = true
tracing.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

# Plugins
makepad-analyzer-plugin-live.workspace = true
