[package]
name = "makepad-analyzer-server"
description = "Analyzer Server for Makepad"
version = "0.0.1"
edition = "2021"

[dependencies]
makepad-analyzer-tracing.workspace = true
makepad-analyzer-plugin-live.workspace = true

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tower-lsp = { workspace = true, features = ["proposed"] }
dashmap.workspace = true
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
